ProjetCompil/Verif/Test/fail/affArrayIndice2.cas
program
	A : boolean;
	B : array [1 .. 18] OF integer;
	C : integer;
begin
	C := B[A];
	
end.
	
